--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.8.1",
     "@clerk/nextjs": "^6.12.1",
+    "@clerk/themes": "^2.2.20",
     "@emotion/react": "^11.14.0",
     "next": "15.2.0",
     "next-themes": "^0.4.4",
