--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@clerk/nextjs": "^6.12.1",
     "@clerk/themes": "^2.2.20",
     "@emotion/react": "^11.14.0",
+    "@supabase/supabase-js": "^2.49.1",
+    "@tanstack/react-query": "^5.66.11",
+    "binance": "^2.15.14",
     "next": "15.2.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
