--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "@emotion/react": "^11.14.0",
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.66.11",
+    "apexcharts": "^4.5.0",
     "binance": "^2.15.14",
+    "moment": "^2.30.1",
     "next": "15.2.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.5.0",
-    "recharts": "^2.15.1"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
